infrastructure/controllers/zion/longhorn/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-traefik-outpost
  namespace: longhorn
spec:
  type: ExternalName
  externalName: auth-traefik-outpost.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard-public
  namespace: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.milanchis.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: authentik-auth-middleware
      services:
        - name: longhorn-frontend
          port: 80
    - match: Host(`longhorn.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: auth-traefik-outpost
  tls:
    secretName: longhorn-certificate-secret
